# WriteX

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  main.cpp  writex.cpp  writex.hpp
.github/workflows/: docs.yml
docs/html/: annotated.html  annotated_dup.js  classes.html  dir_191d3caa65fd9ec65f612def4fe5cc91.html  dir_191d3caa65fd9ec65f612def4fe5cc91.js  dir_4cf0647104c4a27f3d55dafd58bf74d8.html  dir_4cf0647104c4a27f3d55dafd58bf74d8.js  dir_d0be1be5982cd86d734a3d3d049e3192.html  dir_d0be1be5982cd86d734a3d3d049e3192.js  doxygen.css  doxygen_crawl.html  files.html  files_dup.js  functions.html  functions_func.html  globals.html  globals_enum.html  globals_func.html  index.html  menudata.js  navtreedata.js  navtreeindex0.js
docs/html/d1/dbe/: writex_8hpp.html  writex_8hpp.js  writex_8hpp_source.html
docs/html/d7/da6/: classWriteX_1_1Builder-members.html
docs/html/d8/daf/: classWriteX-members.html
docs/html/d9/dcb/: classWriteX.html  classWriteX.js
docs/html/dc/d83/: classWriteX_1_1Builder.html  classWriteX_1_1Builder.js
docs/html/search/: all_0.js  all_1.js  all_3.js  all_4.js  all_5.js  all_7.js  all_a.js  classes_0.js  classes_1.js  enums_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_4.js  files_0.js  functions_0.js  functions_1.js  functions_3.js  functions_5.js  functions_6.js  functions_7.js  searchdata.js
docs/latex/: annotated.tex  files.tex  refman.tex
docs/latex/d1/dbe/: writex_8hpp.tex  writex_8hpp_source.tex
docs/latex/d9/dcb/: classWriteX.tex
docs/latex/dc/d83/: classWriteX_1_1Builder.tex
examples/: example_full.cpp  example_full_build.cpp  example_multi_logger.cpp  example_simple.cpp
include/WriteX/: writex.hpp
scripts/: build_debug.sh  build_examples.sh  build_release.sh  docs_generate.sh  docs_open.sh  make_release.sh  run_examples.sh  run_test_asan.sh  run_test_lsan.sh  run_test_msan.sh  run_test_tsan.sh  run_test_usan.sh  run_tests.sh  test_run.sh  test_run_allsan.sh  test_run_asan.sh  test_run_lsan.sh  test_run_msan.sh  test_run_tsan.sh  test_run_usan.sh
src/: writex.cpp
tests/: test_main.cpp
